add unitcost
