# swagger.json
@@ -533,6 +533,9 @@
                 "price": {
                   "type": "string"
                 },
+                "unit_cost": {
+                  "type":"integer"
+                },
                 "size": {
                   "type": "string"
                 },
@@ -1197,6 +1200,9 @@
                 },
                 "price": {
                   "type": "string"
+                },
+                "unit_cost": {
+                  "type":"integer"
                 },
                 "size": {
                   "type": "string"
@@ -2795,6 +2801,9 @@
         },
         "price": {
           "type": "string"
+        },
+        "unit_cost": {
+          "type":"integer"
         },
         "size": {
           "type": "string"
